# nrf_pk

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dfu/: dfu-cc.proto  dfu_cc_pb2.py
src/nrf_pk/: __main__.py  find_pk.py
